# text-processor

./: CMakeLists.txt  README.md
examples/: agr.txt  agr1.txt  inputText  obrazets-dogovor-nayma-zhilogo-pomescheniya.txt  sample-grammar.grammar
src/: action.cpp  action.hpp  fields-extractor.cpp  fields-extractor.hpp  global-defs.h  grammar-parser.cpp  grammar-parser.h  grammar-rule.cpp  grammar-rule.h  grammar-rules-generator.cpp  grammar-rules-generator.hpp  grammar-words-storage.cpp  grammar-words-storage.hpp  grammar.cpp  grammar.h  lr0-items.cpp  lr0-items.h  main.cpp  parser-table.cpp  parser-table.h  parser.cpp  parser.h  predicate.cpp  predicate.hpp  stack.cpp  stack.h  tokenizer.cpp  tokenizer.h
src/bison/: g-parser-driver.cpp  g-parser-driver.hpp  g-scanner.hpp  glexer.ll  gparser.yy
src/contrib/mystem/: mystem.hpp
src/scripts/: morph.pyx
src/utils/: converter.cpp  converter.h  logger.cpp  logger.h  string-helper.cpp  string-helper.h
